Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4745

warning C4305: 'initializing' : truncation from '"__int64' to 'long'

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.13.0
    • JavaScript - Compiler
    • None
    • Visual Studio 2017

    Description

      // largest consecutive integer representable by a double (2 ^ 53 - 1)
      static const long max_safe_integer = 0x1fffffffffffff;
      

      Raises

      warning C4305: 'initializing' : truncation from '"__int64' to 'long'

      Attachments

        Issue Links

          Activity

            People

              jking3 James E. King III
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: