THRIFT-4745: fixes compiler warnings